# Hurwitzians

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release_python_package.yaml  tag_and_release.yaml  test_python_package.yaml
docs/hurwitzians/: index.html
docs/hurwitzians/tests/: index.html
hurwitzians/tests/: __init__.py
