[tool.poetry]
name = "hurwitzians"
version = "0.0.1"
description = ""
authors = ["James Strudwick <James.Strudwick@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = '^8.3.2'
pytest-cov = '^5.0.0'
tox = '^4.18.0'


[tool.poetry.group.dev.dependencies]
jupyter = '^1.0.0'
pre-commit = '^3.8.0'
pip-licenses = '^5.0.0'
pipdeptree = '^2.23.1'


[tool.poetry.group.docs.dependencies]
pdoc3 = '^0.11.1'

[tool.pytest.ini_options]
addopts = '--cov=/ --cov-report=xml'
testpaths = [
    '',
]

[tool.tox]
legacy_tox_ini = '''
    [tox]
    isolated_build = True
    envlist = py312,py311,py310

    [testenv]
    allowlist_externals = poetry
    commands =
        poetry install
        poetry run pytest
'''

[tool.coverage.run]
omit = ['*/tests/*']

[tool.coverage.report]
fail_under = 80
skip_empty = true
